--- a/src/Shared/Shared/Shared.csproj
+++ b/src/Shared/Shared/Shared.csproj
@@ -25,5 +25,9 @@
     <PackageReference Include="MediatR" Version="12.4.0" />
   </ItemGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\Shared.Contracts\Shared.Contracts.csproj" />
+  </ItemGroup>
+
 
 </Project>
