--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,11 +1,27 @@
 services:
- eshopdb:
+  eshopdb:
     image: postgres
+
+  distributedcache:
+    image: redis
+
+  seq:
+    image: datalust/seq:latest
+
+  messagebus:
+    image: rabbitmq:management
+
+  # messagebus:
+  #   image: rabbitmq:management
+
+  # identity:
+  #   image: quay.io/keycloak/keycloak:24.0.3
+
   # api:
   #   image: ${DOCKER_REGISTRY-}api
   #   build:
   #     context: .
-  #     dockerfile: src/Bootstrapper/Api/Dockerfile
+  #     dockerfile: Bootstrapper/Api/Dockerfile
 
 volumes:
   postgres_eshopdb:
