--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -11,11 +11,8 @@ services:
   messagebus:
     image: rabbitmq:management
 
-  # messagebus:
-  #   image: rabbitmq:management
-
-  # identity:
-  #   image: quay.io/keycloak/keycloak:24.0.3
+  identity:
+    image: quay.io/keycloak/keycloak:24.0.3
 
   # api:
   #   image: ${DOCKER_REGISTRY-}api
