--- a/src/Bootstrapper/Api/appsettings.json
+++ b/src/Bootstrapper/Api/appsettings.json
@@ -6,6 +6,17 @@
     }
   },
   "AllowedHosts": "*",
+  "Keycloak": {
+    "realm": "myrealm",
+    "auth-server-url": "http://localhost:9090/",
+    "ssl-required": "none",
+    "resource": "myclient",
+    "verify-token-audience": false,
+    "credentials": {
+      "secret": ""
+    },
+    "confidential-port": 0
+  },
   "Serilog": {
     "Using": [ "Serilog.Sinks.Console", "Serilog.Sinks.Seq" ],
     "MinimumLevel": {
